tests/errors/duration-out-of-order/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0015]: Duration units must each appear at most once, in descending order: d, h, m, s, ms, us, ns.
  │
1 │ def backwards = 20s2m
  │                 ^^^^^
  ╰─𜱶 tests/errors/duration-out-of-order/main.pa:1:17
